
[metadata]
name = lviewer
version = attr: lviewer.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = The Logger log visualizer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcublog/logger_loader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.10
install_requires =
    pylogus  == 0.1.0
    PyQt6==6.6.1

[options.entry_points]
console_scripts =
    lviewer = lviewer.main:main

[options.packages.find]
where = src